k8s/django-service.yaml
# django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80         # <-- External port
      targetPort: 80   # <-- Must match nginx containerPort
